# KFB_Convert_TIFF

./: CMakeLists.txt  README.md  main.cpp
cpp_encapsulation/: CMakeLists.txt  main.cpp
cpp_encapsulation/include/: kfbslide.h
cpp_encapsulation/src/: kfbslide.cpp
include/: KFB.h  read_RGB_from_KFB.h  utils.h  write_RGB_to_TIFF.h
python_wrapper/src/: ctypes_pipeline.py  openslide_api.py
src/: read_RGB_from_KFB.cpp  utils.cpp  write_RGB_to_TIFF.cpp
